Statistics: Endpoints and methods